Work Item #836 - Implement a MySqlDataRow class to better manage interaction with Excel cells Bug #17852774 - EDIT DATA - DELETING A ROW TRIGGERS A DATA CHANGE IN THE FOLLOWING ROW
- Created the MySqlDataRow class to replace the intermediate RangeAndAddress one that was used to link a DataRow objecet with corresponding Excel ranges containing data from that DataRow object. Now the MySqlDataRow has a direct link with an Excel Range holding the row's data and also with individual Excel Ranges for each of the Excel cells modified by the user during an Edit Data operation. (source/Classes/MySqlDataRow.cs, source/Classes/RangeAndAddress.cs, source/MySQL.ForExcel.csproj)
- Moved some logic that involved refreshing the Excel Range of a DataRow to the new MySqlDataRow class. (source/Forms/EditDataDialog.cs, source/Classes/MySqlDataRow.cs)
- Moved all the logic that involved working with a specifc DataRow object to the new MySqlDataRow class, and some other logic involving Excel Ranges to the ExcelUtilities one. (source/Classes/ExcelUtilities.cs, source/Classes/MySqlDataTable.cs, source/Classes/MySqlDataRow.cs)
- Moved some logic involving MySQL data from the ExcelAddInPane class to the MySqlDataUtilities one. (source/Classes/MySqlDataUtilities.cs, source/Controls/ExcelAddInPane.cs)
- Changed the type of the ImportDataTable property to hold a MySqlDataTable object instead of a regular DataTable, this makes it easier to assign a corresponding Excel Range to a MySqlDataRow inside the MySqlDataTable at import time. Also added code to the ImportButton_Click method to feed the importing data to the MySqlDataTable. (source/Forms/ImportTableViewForm.cs)
- Added a new overload for the AddResult method in the PushResultsDataTable class. (source/Classes/PushResultsDataTable.cs)
- Added some resource strings. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.2.0
+- Fixed code that was not detecting an Excel row deletion but instead was detecting an Excel row change during an Edit Data operation.
+  (Bug #17852774 - EDIT DATA - DELETING A ROW TRIGGERS A DATA CHANGE IN THE FOLLOWING ROW)
+- Changes done to the Advanced Options dialogues for Import, Export and Append Data forms are immediately reflected without requiring to close and reopen those forms.
 - Added support for optimistic updates to Edit Data operations via a configurable option, using optimistic updates will ensure that pushing changes in the current
   editing session does not overwrite changes done by another person to the set of data retrieved initially. This option can be set globally for all editing sessions
   open by the current user which is persisted in the settings file, or for a specific editing session so when the session is over the optimistic update value is
@@ -7,7 +10,6 @@
   can be right-clicked and a new "Edit Connection" context menu is available for users to edit the Workbench connection properties.  This feature shines brighter
   when MySQL Workbench is not installed since users only relied on MySQL Workbench to edit a connection, without Workbench users had to delete a connection and
   create it again with updated values.
-- Changes done to the Advanced Options dialogues for Import, Export and Append Data forms are immediately reflected without requiring to close and reopen those forms again.
 
 1.1.2
 - Generate a password dynamically to protect Excel Worksheets during Edit Data operations instead of using a hardcoded GUID. If the user saves the Workbook while
