Work Item #706 - Allow for query editing before query is applied upon Append, Export and Edit
- Added "Preview SQL statements before they are sent to the server" and "Show executed SQL statements along with their results" global options to control this behavior of this feature. (source/Properties/Settings.Designer.cs, source/Properties/Settings.settings)
- Created the MySqlStatement class to encapsulate the storage of the SQL statement related to a data row and to execute the statement and hold results information like warnings, error messages and affected rows count. (source/Classes/MySqlStatement.cs)
- Created the IMySqlDataRow interface to define basic methods and properties needed to interact with a statement. (source/Interfaces/IMySqlDataRow.cs)
- Created the MySqlScriptDialog class to visually display the statements that are going to be executed as part of an Append, Export or Edit data operation, users can modify the previewed statements and then execute them. (source/Forms/MySqlScriptDialog.cs, source/Forms/MySqlScriptDialog.Designer.cs, source/Forms/MySqlScriptDialog.resx)
- Deprecated (deleted) the PushResultsDataTable class. (source/Classes/PushResultsDataTable.cs)
- Created the MySqlDummyRow class to hold SQL statements typed in by a user or edited from a statement contained in a MySqlDataRow object. These dummy rows are treated just the same as MySqlDataRow objects to execute statements. (source/Classes/MySqlDummyRow.cs)
- Removed the AppendDataWithManualQuery, InsertDataWithManualQuery, CreateTable, GetAppendSql and GetInsertSql methods because their functionality is now encapsulated in the MySqlDataRow, MySqlStatement and MySqlScriptDialog classes, also this was simplified by having a single object producing the SQL statements independent of the operation being performed (Append, Export or Edit). Broke down the SetData method into the SetupColumnsWithData and AddExcelData methods, this way there is less overhead when filling a table with data to creat

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.2.0
+- Added "Preview SQL statements before they are sent to the server" and "Show executed SQL statements along with their results" global options. The first option
+  lets users preview the SQL statements used in an Export, Append or Edit data operation before they are sent to the MySQL server and edit them if needed. The
+  second option lets users apply the statements directly and show the executed SQL statements after they were applied along with the results of the operations.
 - Fixed code that was not detecting an Excel row deletion but instead was detecting an Excel row change during an Edit Data operation.
   (Bug #17852774 - EDIT DATA - DELETING A ROW TRIGGERS A DATA CHANGE IN THE FOLLOWING ROW)
 - Changes done to the Advanced Options dialogues for Import, Export and Append Data forms are immediately reflected without requiring to close and reopen those forms.
