--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.2.0
+- Added the "Create an Excel table for the imported MySQL table data" option to the Import Data dialog's advanced options to automatically create an Excel table
+  object for every MySQL table imported to Excel so it can be used for Excel data analysis. Additionally the user can override the default style for the Excel
+  table and choose one of the available styles displayed within a drop down list.
 - Added a new label "Schema:" to the panel "Select a Database Object" that shows the name of the current schema, located just below the "User:" and "IP:" labels.
 - Added "Preview SQL statements before they are sent to the server" and "Show executed SQL statements along with their results" global options. The first option
   lets users preview the SQL statements used in an Export, Append or Edit data operation before they are sent to the MySQL server and edit them if needed. The
