Work Item #901 - Edit Data results dialog not showing the number of updated, deleted and inserted rows
- Added an informational label to the MySqlScriptDialog to show to users the number of deleting, inserting and/or updating operations reflected in the original SQL statements, this label is only shown if the MySqlScriptDialog is used along with a MySqlDataTable object. (source/Forms/MySqlScriptDialog.cs, source/Forms/MySqlScriptDialog.Designer.cs, source/Forms/MySqlScriptDialog.resx)
- Fixed code in the PushDataChanges method where the number of deleted, inserted and updated operations always was shown as 0 when showing the query results along with the executed SQL statements. Fixed code as well in the same method to show the executed operations count when showing no SQL statements at all. (source/Forms/EditDataDialog.cs)
- Added resource strings for changes in the MySqlScriptDialog. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -825,4 +825,22 @@ Do you want to exit Edit Mode on all Worksheets within the Workbook before savin
   <data name="SqlStatementsProducingWarningsText" xml:space="preserve">
     <value>The following SQL statements produced warnings:</value>
   </data>
+  <data name="ScriptCreatingTableText" xml:space="preserve">
+    <value>Creating Table '{0}'</value>
+  </data>
+  <data name="ScriptDeletingRowsText" xml:space="preserve">
+    <value>Deleting {0}</value>
+  </data>
+  <data name="ScriptInsertingRowsText" xml:space="preserve">
+    <value>Inserting {0}</value>
+  </data>
+  <data name="ScriptRowsText" xml:space="preserve">
+    <value>row(s)</value>
+  </data>
+  <data name="ScriptUpdatingRowsText" xml:space="preserve">
+    <value>Updating {0}</value>
+  </data>
+  <data name="ScriptWithSqlStatementsText" xml:space="preserve">
+    <value> with the following SQL statement(s):</value>
+  </data>
 </root>
