Work Item #692 - Save edit sessions in file and reopen automatically (Part 2)
- Moved logic from ExcelAddInPane to ThisAddIn class in order to properly manage Edit sessions where a single ExcelAddInPane is used with many Excel workbooks (SDI) but also support the scenario where each workbook contains an ExcelAddInPane (MDI). (source/Controls/ExcelAddInPane.cs, source/Controls/ExcelAddInPane.Designer.cs, source/Forms/EditDataDialog.cs, source/ThisAddIn.cs, source/Panels/DbObjectSelectionPanel.cs, source/Panels/SchemaSelectionPanel.cs, source/Panels/WelcomePanel.cs)
- Changed the dialog showed to users to ask them what to do with saved Edit sessions. (source/Forms/RestoreEditSessionsDialog.cs, source/Forms/RestoreEditSessionsDialog.Designer.cs, source/Forms/RestoreEditSessionsDialog.resx)

--- a/source/Forms/RestoreEditSessionsDialog.resx
+++ b/source/Forms/RestoreEditSessionsDialog.resx
@@ -117,4 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="RestoreEditSessionsDetailLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="LogoPictureBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="RestoreEditSessionsTitleLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="DeleteButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="NothingButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="RestoreButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
