Work Item #929 - "Append excel data to table" got stuck (never finish the adding data operation)
- Handled errors correctly when data is being assigned to a target MySqlDataTable just before the SQL statements for the append operation are generated, the errors come from invalid data that can't be actually inserted to the target table. (source/Classes/MySqlDataTable.cs)
- Added visual warnings to the Append Data dialog for source Excel columns being mapped to target MySQL columns where the source data is not suitable for the mapped target column's data type, so the user can make corrections before the data is attempted to be appended on the server. (source/Classes/MySqlDataColumn.cs, source/Classes/MySqlDataTable.cs, source/Forms/AppendDataForm.cs, source/Forms/AppendDataForm.Designer.cs, source/Forms/AppendDataForm.resx)
- Fixed a bug on the append data operation that was never honoring the value of the "First row contains column names" checkbox, causing the append data to always try to insert the first row, when the first row contains column names the data may not be suitable for insertion on the target table columns. (source/Classes/MySqlDataRow.cs)
- Added support to remove or clear mappings via a context menu opened from the source grid, before only the target grid contained the context menu. (source/Forms/AppendDataForm.cs, source/Forms/AppendDataForm.Designer.cs, source/Forms/AppendDataForm.resx)
- Added and slightly changed the wording on some resource strings. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.2.0
+- Added visual warnings to the Append Data dialog for source Excel columns being mapped to target MySQL columns where the source data is not suitable for the
+  mapped target column's data type, so the user can make corrections before the data is attempted to be appended on the server.
 - Added "Allow to save active editing sessions" global option. This will let users to save their opened edit sessions when saving the workbook, and restoring them
   by reopening the workbook.
 - Added the "Create an Excel table for the imported MySQL table data" option to the Import Data dialog's advanced options to automatically create an Excel table
